--- a/app.json
+++ b/app.json
@@ -25,6 +25,17 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "da9f6f54-1216-4206-9152-4c83653a9919"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/da9f6f54-1216-4206-9152-4c83653a9919"
     }
   }
 }
