--- a/package.json
+++ b/package.json
@@ -1,35 +1,36 @@
 {
-	"name": "learninghub",
-	"version": "1.0.0",
-	"main": "node_modules/expo/AppEntry.js",
-	"scripts": {
-		"start": "expo start",
-		"android": "expo start --android",
-		"ios": "expo start --ios",
-		"web": "expo start --web"
-	},
-	"dependencies": {
-		"@react-navigation/bottom-tabs": "^6.5.11",
-		"@react-navigation/native": "^6.1.9",
-		"@react-navigation/native-stack": "^6.9.17",
-		"@rneui/themed": "^4.0.0-rc.8",
-		"expo": "~49.0.15",
-		"expo-av": "~13.4.1",
-		"expo-status-bar": "~1.6.0",
-		"expo-updates": "~0.18.17",
-		"firebase": "^10.7.0",
-		"react": "18.2.0",
-		"react-hook-form": "^7.48.2",
-		"react-native": "0.72.6",
-		"react-native-element-dropdown": "^2.10.1",
-		"react-native-gifted-charts": "^1.3.28",
-		"react-native-root-toast": "^3.5.1",
-		"react-native-safe-area-context": "^4.7.4",
-		"react-native-screens": "^3.27.0",
-		"react-native-svg": "^14.1.0"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.20.0"
-	},
-	"private": true
+  "name": "learninghub",
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
+  },
+  "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "expo": "~49.0.15",
+    "expo-av": "~13.4.1",
+    "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.17",
+    "firebase": "^10.7.0",
+    "react": "18.2.0",
+    "react-hook-form": "^7.48.2",
+    "react-native": "0.72.6",
+    "react-native-element-dropdown": "^2.10.1",
+    "react-native-gifted-charts": "^1.3.28",
+    "react-native-root-toast": "^3.5.1",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.27.0",
+    "react-native-svg": "^14.1.0",
+    "expo-image-picker": "~14.3.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0"
+  },
+  "private": true
 }
